tests/fixtures/invalid/assignment_missing_rhs.c
int main(void) {
    int value = 1;
    value = ;
    return value;
}
